fix no scrollbar

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -424,12 +424,7 @@ header#header .fa-item {
     margin-right: 5px;
 }
 
-.herounitFix, .herounitFix body {
-    overflow:hidden;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
+
 
 
 
